syntax = "proto3";

service PortDomainService {
    rpc Save (SaveRequest) returns (SaveResponse) {
    }

    rpc Get (GetRequest) returns (GetResponse) {
    }
}

message Coordinates {
    float lat = 1;
    float lng = 2;
}

message SaveRequest {
    string id = 1;
    string name = 2;
    string city = 3;
    string country = 4;
    Coordinates coords = 5;
}

message SaveResponse {
    string name = 1;
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    string id = 1;
    string name = 2;
    string city = 3;
    string country = 4;
    Coordinates coords = 5;
}